@@ -4,6 +4,7 @@
 * Fixed bug where the keywords condition was removing foreign characters.
 * Added configuration option for specifying your javascript library, to cut down on the javascript Searchgasm adds into the form helpers
 * Fixed bug with "not" conditions to use sanitize method, like it should, instead of to_conditions.
+* Only pass :distinct option for calculations if joins are present
 
 == 1.5.2 released 2008-10-21
 
